tests/failing/too_many_args_closure.rgo
int: @/int
exit: @/exit

bar: (ok:()){
    ok()
}
foo: (x: int, y: int) {
    exit(0)
}
bar(foo(1, 2, 3))
